fix line spacing in guest essay author name

--- a/assets/scss/unsorted.scss
+++ b/assets/scss/unsorted.scss
@@ -64,6 +64,8 @@ h1 {
     font-size: 16px;
     margin-left: 16px;
     display: block;
+    margin-top: 12px;
+    line-height: 20px;
   }
 
   .image-container {
